# nasa-space-apps-challenge-2020

./: README.md
data/: adjacency_matrix.ipynb  get_data.py  word_embeding.R
server/: README.md  pyproject.toml  server.py
