[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
pandas = "^1.1.2"
scikit-learn = "^0.23.2"
gensim = "^3.8.3"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
